# repofit

./: .env.example  .gitignore  README.md  pyproject.toml  schema.sql
.github/workflows/: daily-sync.yml
scripts/: repofit-daily.service  repofit-daily.timer
src/: cli.py  config.py  models.py
src/ai/: __init__.py  rag.py
src/analyzer/: __init__.py  ai_advisor.py
src/collector/: __init__.py  scraper.py  search.py
src/embedder/: __init__.py  gemini_embedder.py
src/enricher/: __init__.py  github_api.py  github_sync.py
src/matcher/: __init__.py  recommender.py
src/notifier/: __init__.py  bot.py  slack.py
src/reporter/: __init__.py  console.py
src/scanner/: __init__.py  folder_scanner.py
src/storage/: __init__.py  supabase_client.py
web/: README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/projects/: page.tsx
web/src/app/projects/new/: page.tsx
web/src/app/recommendations/: page.tsx
web/src/components/: BookmarkButton.tsx  Navbar.tsx  ProjectCard.tsx  RecommendationCard.tsx  TrendingCard.tsx  providers.tsx
web/src/types/: index.ts
