[project]
name = "repofit"
version = "0.1.0"
description = "AI-powered GitHub Trending analyzer with project-fit recommendations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["github", "trending", "ai", "cli", "open-source"]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "supabase>=2.11.0",
    "google-genai>=1.0.0",
    "selectolax>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # RAG & Slack Bot
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "slack-bolt>=1.20.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
gt = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
